# cxx_boilerplate

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  README.md  hadolint.yaml
.github/workflows/: test.yml
executables/: CMakeLists.txt  print_hello.cpp
grafana/provisioning/: datasource.yml
header_include/: CMakeLists.txt
header_include/header_example/: tools.h
include/example/: tools.h
libraries/: CMakeLists.txt
libraries/appbase/: CMakeLists.txt  application.cpp  version.cmake.in
libraries/example/: CMakeLists.txt  tools.cpp  tools2.cpp
libraries/example/include/example/: tools.hpp  tools2.hpp
libraries/example_header_only/: CMakeLists.txt
libraries/example_header_only/include/example_header_only/: tools.hpp
local_tools/: pyproject.toml
programs/: CMakeLists.txt  example.json
programs/example_allocator/: CMakeLists.txt  main.cpp
programs/example_appbase/: CMakeLists.txt
programs/example_application/: CMakeLists.txt
programs/example_benchmark/: CMakeLists.txt  main.cpp
programs/example_cli/: CMakeLists.txt  main.cpp
programs/example_spdlog/: CMakeLists.txt  main.cpp
programs/parse/: CMakeLists.txt  parse.cpp
programs/print_hello/: CMakeLists.txt  print_hello.cpp
programs/tools/: CMakeLists.txt  crash.cpp  show_boost_version.cpp  show_version.cpp
prometheus/: prometheus.yml
scripts/: build_ci_base_image.sh  cleanup_prometheus_data.sh  common.sh  setup_gitlab_instance.sh
src/example/: CMakeLists.txt  tools.cpp
tests/: CMakeLists.txt  address_invalid_test.cpp  allocator_test.cpp  benchmarking_test.cpp  coverage_test.cpp  example2_test.cpp  example3_test.cpp  example_test.cpp  profiling_test.cpp  second_example_test.cpp  threading_test.cpp
tests/test_tools/: CMakeLists.txt  test_tools.cpp  tools.cpp
tests/test_tools/include/test_tools/: test_tools.h  tools.hpp
