[tool.poetry]
name = "local-tools"
version = "0.1.0"
description = ""
authors = ["Marcin Sobczyk <marcinpiotrsobczyk@gmail.com>"]
readme = "README.md"
packages = [{include = "local_tools"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
